src/css/main.css
@import "whether-widget.css";
@import "house-item.css";
@import "pagination.css";
@import "filter.css";

.main-content {
  flex: 1 0 auto;
  padding-left: 40px;
  margin-top: 92px;
}

.main-widget {
  display: flex;
  flex-direction: column;
  width: 630px;
  height: 331px;
  background-image: url("../assets/bg@1x.png");
  background-image: -webkit-image-set(
      url("../assets/bg@1x.png") 1x,
      url("../assets/bg@2x.png") 2x
  );
  background-repeat: no-repeat;
  background-position: 40% 50%;
  background-clip: border-box;
  border-radius: 20px;
  min-width: 285px;
}

.main-section {
  margin: 30px 0;
}

#main {
  margin-right: 26px;
}

#featured-scenarios {
  width: 100%;
  margin-right: 40px;
}

#featured-devices {

}

.main-content__first-line {
  display: flex;
}

.main-section__header {
 margin-bottom: 20px;
}

.main-section__header_margin_right {
  margin-right: 40px;
}

.section-header__name {
  font-weight: bold;
  white-space: nowrap;
  font-size: 18px;
  color: #333333;
}

.section-header__name_margin_right {
   margin-right: 7px;
}

.pagination {
}

.info-pane {
  padding: 26px 0 0 25px;
}

.info-pane__greetings {
  font-weight: bold;
  font-size: 27px;
  line-height: 1.4;
  color: #333333;
}

.info-pane__status {
  font-size: 14px;
  color: #333333;
}

.flex__justify_space-between {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.flex__justify_flex-start {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.scenarios-pane {
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  grid-auto-rows: 100px;
  grid-gap: 15px 15px;
}

.devices-pane {
  display: grid;
  overflow: hidden;
  /*grid-template-columns: repeat(auto-fit, 200px);*/
  grid-auto-flow: column;
  grid-auto-columns: 200px;
  grid-auto-rows: 120px;
  grid-gap: 15px 15px;
}

